Prevent control panel from flickering

--- a/client/src/scss/gallery.scss
+++ b/client/src/scss/gallery.scss
@@ -72,7 +72,7 @@
   flex-flow: column;
   max-height: 240px;
   min-height: 240px;
-  overflow: auto;
+  overflow: hidden;
   padding-bottom: 0;
   .row {
     justify-content: space-around;
